--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BasicLevel.BasicLevel
+EditorStartupMap=/Game/Levels/SplashScreen.SplashScreen
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/BasicLevel.BasicLevel
+GameDefaultMap=/Game/Levels/SplashScreen.SplashScreen
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_KillEmAllGameModeSpectatorTeam.BP_KillEmAllGameModeSpectatorTeam_C
 GlobalDefaultServerGameMode=None
