Creating UI to setup FFA level

--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -9,10 +9,10 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/GameMode/BP_MainGameInstance.BP_MainGameInstance_C
 GameDefaultMap=/Game/Levels/SplashScreen.SplashScreen
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_KillEmAllGameModeSpectatorTeam.BP_KillEmAllGameModeSpectatorTeam_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
