Multiplayer Update - Refactor and ServerTravel fixed

--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/SplashScreen.SplashScreen
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Levels/TransitionMap.TransitionMap
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
@@ -13,7 +13,7 @@ GameInstanceClass=/Game/Blueprints/GameMode/BP_MainGameInstance.BP_MainGameInsta
 GameDefaultMap=/Game/Levels/SplashScreen.SplashScreen
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
-GlobalDefaultServerGameMode=None
+GlobalDefaultServerGameMode=/Game/Blueprints/GameMode/BP_LobbyGameMode.BP_LobbyGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
