--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -149,3 +149,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/SimpleShooter.AmmoPack",NewName="/Script/SimpleShooter.SP_AmmoPack")
++ClassRedirects=(OldName="/Script/SimpleShooter.Gun",NewName="/Script/SimpleShooter.SP_Gun")
