Refactor single player and multiplayer class

--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -150,3 +150,14 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/SimpleShooter.AmmoPack",NewName="/Script/SimpleShooter.SP_AmmoPack")
 +ClassRedirects=(OldName="/Script/SimpleShooter.Gun",NewName="/Script/SimpleShooter.SP_Gun")
++ClassRedirects=(OldName="/Script/SimpleShooter.HealthPack",NewName="/Script/SimpleShooter.SP_HealthPack")
++ClassRedirects=(OldName="/Script/SimpleShooter.ItemPack",NewName="/Script/SimpleShooter.SP_ItemPack")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterCharacter",NewName="/Script/SimpleShooter.SP_ShooterCharacter")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterSpectatorPawn",NewName="/Script/SimpleShooter.SP_ShooterSpectatorPawn")
++ClassRedirects=(OldName="/Script/SimpleShooter.SpawningPoint",NewName="/Script/SimpleShooter.SP_SpawningPoint")
++ClassRedirects=(OldName="/Script/SimpleShooter.Waypoint",NewName="/Script/SimpleShooter.SP_Waypoint")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterAIController",NewName="/Script/SimpleShooter.SP_ShooterAIController")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterPlayerController",NewName="/Script/SimpleShooter.SP_ShooterPlayerController")
++ClassRedirects=(OldName="/Script/SimpleShooter.LobbyGameMode",NewName="/Script/SimpleShooter.MP_LobbyGameMode")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterGameState",NewName="/Script/SimpleShooter.MP_ShooterGameState")
++ClassRedirects=(OldName="/Script/SimpleShooter.ShooterPlayerState",NewName="/Script/SimpleShooter.MP_ShooterPlayerState")
