--- a/SimpleShooter/Config/DefaultEngine.ini
+++ b/SimpleShooter/Config/DefaultEngine.ini
@@ -161,3 +161,4 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/SimpleShooter.LobbyGameMode",NewName="/Script/SimpleShooter.MP_LobbyGameMode")
 +ClassRedirects=(OldName="/Script/SimpleShooter.ShooterGameState",NewName="/Script/SimpleShooter.MP_ShooterGameState")
 +ClassRedirects=(OldName="/Script/SimpleShooter.ShooterPlayerState",NewName="/Script/SimpleShooter.MP_ShooterPlayerState")
++ClassRedirects=(OldName="/Script/SimpleShooter.ABaseShooterSpectatorPawn",NewName="/Script/SimpleShooter.BaseShooterSpectatorPawn")
