--- a/SimpleShooter/Config/DefaultInput.ini
+++ b/SimpleShooter/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="SelfDamage",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="ToggleDebugSpectatorMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="SkipFrame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
